--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -124,12 +124,12 @@
 <body>
     <!-- Main Content -->
     <div class="container">
-        <div class="team-spy">Team SPY</div>
+        <div class="team-spy">🛍 PAID BOT 🤖: @SEM2JOB</div>
         <div class="bot-status">⚡ Bot is Live ⚡</div>
 
         <div class="actions">
-            <a href="https://t.me/team_spy_pro" class="btn">Join Us</a>
-            <a href="https://github.com/devgaganin" class="btn">GitHub</a>
+            <a href="https://t.me/SEM2JOB" class="btn">Join Us</a>
+            <a href="https://t.me/SEM2JOB_service_bot" class="btn">GitHub</a>
         </div>
     </div>
 </body>
