--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Team SPY - Bot is Live</title>
+    <title>SEM2JOB Bot is Live</title>
     <style>
         /* Basic reset */
         * {
